--- a/style.css
+++ b/style.css
@@ -75,3 +75,16 @@ h1, h2, h3, h4, h5, h6 {
   padding: 0.5rem 1rem;
   line-height: 1.3rem;
 }
+
+
+/* Media queries */
+
+@media (min-width: 1200px) {
+  #left {
+    flex: 4;
+  }
+
+  #right {
+    flex: 6;
+  }
+}
