--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
+*{
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
@@ -76,6 +80,50 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1.3rem;
 }
 
+
+/* Buttons */
+
+.btn {
+  width: 100%;
+  padding: 0.7rem 1rem;
+  height: 2.7rem;
+  display: block;
+  border: 0;
+  border-radius: 3px;
+  font-weight: 500;
+  background-color: #0074ab;
+  color: #fff;
+  text-decoration: none;
+  cursor: pointer;
+  text-align: center;
+  transition: background-color 0.2s;
+  letter-spacing: .01em;
+}
+
+.btn:hover {
+  background-color: #006395;
+}
+
+.btn_secondary {
+  width: 100%;
+  padding: 0.7rem 1rem;
+  height: 2.7rem;
+  display: block;
+  border: 0;
+  border-radius: 3px;
+  font-weight: 500;
+  background-color: rgba(138,153,168,.25);
+  color: #fff;
+  text-decoration: none;
+  cursor: pointer;
+  text-align: center;
+  transition: background-color 0.2s;
+  letter-spacing: .01em;
+}
+
+.btn_secondary:hover {
+  background-color: rgba(138,153,168,.3);
+}
 
 /* Media queries */
 
