--- a/style.css
+++ b/style.css
@@ -165,6 +165,14 @@ h1, h2, h3, h4, h5, h6 {
   padding-top: 5rem;
 }
 
+#footer a {
+  text-decoration: underline;
+  color: rgba(255, 255, 255, 0.7);
+}
+
+#footer a:hover {
+  color: #0074ab;
+}
 
 /* Media queries */
 
